# Alexandria

./: .gitattributes  BACKLOG.md  Makefile  README.md  io.github.pemsley.Alexandria.yml  pyproject.toml  python-deps.yaml
alexandria/: __init__.py  author_works.py  browse.py  discover.py  funding_links.py  index.py  markup.py  metrics.py  pdb_mentions.py  pdf_fetch.py
alexandria_mcp/: __init__.py  __main__.py  config.py  db.py  models.py  server.py
data/: io.github.pemsley.Alexandria.desktop  io.github.pemsley.Alexandria.metainfo.xml
docs/design/: database-and-nfs.md
docs/plans/: 2026-05-06-google-docs-addon.md
pdforg/: author_works.py  bibtex.py  bibtex_export.py  bibtex_import.py  browse.py  csl.py  csl_format.py  discover.py  edit_dialog.py  extract.py  feed.py  feed_window.py  identity.py  import_toast.py  importer.py  index.py  marks_config.py  markup.py  metrics.py  opener.py  pdb_mentions.py  pdf_links.py  prefs.py  references_pdf.py  ris_export.py  sidecar.py  viewer.py  watcher.py
tests/: test_bibtex.py  test_import_toast.py  test_metrics_crossref.py  test_pdb_mentions.py
