[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alexandria"
version = "0.1.0"
description = "Alexandria — a GTK4 personal library of scientific papers, with annotations, citation tracking, and OpenAlex integration"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{name = "Paul Emsley"}]
requires-python = ">=3.9"
dependencies = [
    "PyGObject>=3.42",
    "pdfx",
    "pypdf",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
]
keywords = ["pdf", "bibliography", "reference-manager", "gtk4", "openalex",
            "crossref", "alexandria", "research", "library"]

[project.urls]
Homepage    = "https://github.com/pemsley/Alexandria"
Repository  = "https://github.com/pemsley/Alexandria"
Issues      = "https://github.com/pemsley/Alexandria/issues"

[project.scripts]
alexandria-browse   = "pdforg.browse:main"
alexandria-import   = "pdforg.cli_import:main"
alexandria-classify = "pdforg.classify:main"

[tool.setuptools.packages.find]
include = ["pdforg*"]
exclude = ["tests*"]
