[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alexandria"
version = "0.1.0"
description = "Alexandria — a GTK4 personal library of scientific papers, with annotations, citation tracking, and OpenAlex integration"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{name = "Paul Emsley"}]
requires-python = ">=3.9"
dependencies = [
    "PyGObject>=3.42",
    "pdfx",
    "pypdf",
    # bibtexparser v2 has the parse_string / middlewares API that
    # bibtex.py uses; v1 doesn't. v2 is still pre-release on PyPI,
    # so pin explicitly — pip otherwise refuses pre-releases.
    # bibtexparser prior to v2 is not maintained.
    "bibtexparser==2.0.0b9",
    # CSL citation processor for "Cite this paper as…" — turns
    # CSL JSON + a .csl style into a formatted citation. Used by
    # csl_format.py.
    "citeproc-py>=0.9",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
]
keywords = ["pdf", "bibliography", "reference-manager", "gtk4", "openalex",
            "crossref", "alexandria", "research", "library"]

[project.urls]
Homepage    = "https://github.com/pemsley/Alexandria"
Repository  = "https://github.com/pemsley/Alexandria"
Issues      = "https://github.com/pemsley/Alexandria/issues"

[project.scripts]
alexandria-browse   = "pdforg.browse:main"
alexandria-import   = "pdforg.cli_import:main"
alexandria-classify = "pdforg.classify:main"

[tool.setuptools.packages.find]
include = ["pdforg*"]
exclude = ["tests*"]

# Bundle the vendored CSL style files (CC-BY-SA 3.0, from
# github.com/citation-style-language/styles) so they're available
# from `pip install .` and from the Flatpak build.
[tool.setuptools.package-data]
pdforg = ["styles/*.csl"]
